# sahl

./: README.md  ansible.cfg  playbook.yml  pyproject.toml  requirements.yml  run_test.yml
group_vars/: vars.yml
roles/wsl/tasks/: cloud.yml  essential.yml  k8.yml  main.yml  minikube.yml  pyenv-venv.yml  terminal.yml
