[tool.poetry]
name = "sahl"
version = "0.1.0"
description = ""
authors = ["Sahl (سهل ) is an effortless instalation of your favorite developing tools with Ansible"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yamllint = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
